--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "fs": "0.0.1-security",
     "googleapis": "^91.0.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "joi": "^17.4.2",
     "morgan": "~1.9.1",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.2"
   }
