--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "joi": "^17.4.2",
+    "lodash": "^4.17.21",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
